    gets odd params.
 * Added subject editor to admin options.

2006-12-12 cjg
 * Added hook on files modified.

2006-12-12 cjg
 * Added description for subject::edit
 * Made multilang use $c->{languages} for their default list of langs.
 * ...or take it from a multifield property.

2006-12-12 cjg
 * Another attempt to supress the odd no-results bug we're seeing in the log.
 * Added a warning if no contact_email and no public docs.

2006-12-12 cjg
 * Boolean fields which are not required now get an UNSPECIFIED option
 * workflow can override the top subject field and the options from a set
 
2006-12-12 cjg
 * Added a way to override parameters of plugins.
 * Added "advertised" option to import/export plugins to allow them to
    still work, but not get advertised that they are available.
 * Added examples to plugins.pl

2006-12-12 cjg
 * namedset fields can have an option param. This is largely used to limit
    the options shown in workflows.

2006-12-12 cjg
 * New from data now handles compound datastructures
 * XML export now run through XML::tidy.
 * Import/Export XML does something nice with compound fields.
 * Fixed some $plugin->params which should have been ->param

2006-12-13 cjg
 * set_value now does not abort if the field is not a real field, but it
    still gives a warning.
 * Added tidy method to dataobj to remove empty rows in multiple fields.
 * Called tidy from each commit() method
 * Removed broken blank-row-removed from database module.
 * Fixed warning in Boolean caused by recent changes.
 * Fixed typo in Access where timestamp should have been datestamp.
 * More attempts to fix that weird abstractsearch no results bug.
 * Fixed import to only ask about userid if we are actually importing.

2006-12-13 tmb
 * added funders, projects and divisions fields
 * added default organisation structure hierarchy for divisions field
 * added lookup script which attempts to detect and prevent duplicate deposits
    by looking at the title being entered